# data-structures-with-c

./: .gitignore  .replit  CMakeLists.txt  Doxyfile  buildNRun.sh  cmake-configure.sh  main.c
Tasks/: CMakeLists.txt
Tasks/Lab1/: Task1.c  Task2.c  Task3.c  Task4.c
Tasks/Lab10/: Task1.c
Tasks/Lab12/: Task1.c  Task2.c
Tasks/Lab13/: Task1.c  Task2.c  Task3.c  init.h
Tasks/Lab14/: Task1.c
Tasks/Lab2/: Task1.c
Tasks/Lab4/: Task1.c
Tasks/Lab5/: Task1.c
Tasks/Lab6/: Task1.c  Task2.c  Task3.c  doubleLinkedList.c
Tasks/Lab8/: Task1.c
Tasks/LabTest1/: Task1.c  Task2.c
Tasks/LabTest2/: Task1_1.c  Task1_2.c  TaskC_1.c  TaskC_2.c  doubleLinkedList.c
Tasks/LabTest3/: BinarySearchTree.c  BinarySearchTree.h  Operation Count.xlsx  Task1.c  Task2.c
Tasks/Quiz/: Quiz1.c  structOnly.c  structOnly.s
Tests/: CMakeLists.txt  bst.c  list.c  ll.c  map.c  queue.c  simple.c  stack.c  type.c
Tests/interfaces/list/: bst.c
Tests/primitives/: int.c
Tests/types/: int.c
include/: binarySearchTree.h  bst.h  dllQueue.h  doublyLinkedList.h  dscommon.h  graph.h  heap.h  list.h  ll.h  map.h  queue.h  stack.h  type.h
include/algorithms/hash/: fnv.h
include/interfaces/list/: bst.h  list.h  ll.h
include/internals/: bst.h  list.h  ll.h  map.h
include/internals/interfaces/list/: bst.h  list.h  ll.h
include/internals/primitives/: int.h  string.h
include/primitives/: int.h  primitives.h  string.h
include/types/: int.h  primitives.h
lib/include/: binarySearchTree.h  dllStack.h  doublyLinkedList.h  dsCommon.h  heap.h
lib/src/: binarySearchTree.c  dllQueue.c  dllStack.c  doublyLinkedList.c  heap.c
resources/random/: 10.txt  100.txt  1000.txt  10000.txt  100000.txt  50000.txt
src/: binarySearchTree.c  bst.c  doublyLinkedList.c  graph.c  list.c  ll.c  map.c  queue.c  stack.c  type.c
src/algorithms/hash/: fnv.c
src/interfaces/list/: bst.c  list.c  ll.c
src/primitives/: int.c  string.c
src/types/: int.c
